<resources>
    <string name="app_name">BLE App</string>
    <string name="text_welcome">Let\'s Get Your Files!</string>
    <string name="btn_get_started">Get Started</string>
    <string name="text_scan_activity">Please enable Bluetooth and Location Services to proceed</string>
    <string name="btn_scan">SCAN</string>
    <string name="tgbtn_bt">Bluetooth On/Off</string>
    <string name="tgbtn_on">On</string>
    <string name="tgbtn_off">Off</string>
    <string name="tgbtn_loc">Location On/Off</string>
    <string name="ble_not_supported">Bluetooth Low Energy is not supported on your device.</string>
    <string name="text_enable_Internet">Enable Wi-Fi or Mobile Data to Download the file</string>
    <string name="btn_DownloadFile">Download File</string>
</resources>
