<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ScanActivity">

    <TextView
        android:id="@+id/textView_scanActivity"
        android:layout_width="195dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="13dp"
        android:layout_marginTop="10dp"
        android:text="@string/text_scan_activity" />

    <Button
        android:id="@+id/button_scanActivity"
        android:layout_width="76dp"
        android:layout_height="44dp"
        android:layout_below="@+id/toggleButton_scanActivity"
        android:layout_alignStart="@+id/toggleButton_scanActivity"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="-2dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="72dp"
        android:background="@drawable/button"
        android:text="@string/btn_scan"
        android:textColor="#FFFFFF" />

    <ToggleButton
        android:id="@+id/toggleButton_scanActivity"
        android:layout_width="74dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="29dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="73dp"
        android:layout_toEndOf="@+id/textView_scanActivity"
        android:checked="false"
        android:text="@string/tgbtn_bt"
        android:textOff="@string/tgbtn_off"
        android:textOn="@string/tgbtn_on"
        android:textColor="#FFFFFF"
        android:background="@drawable/button"/>

    <ListView
        android:id="@+id/listView_scanActivity"
        android:layout_width="383dp"
        android:layout_height="334dp"
        android:layout_below="@+id/textView_scanActivity"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="1dp"
        android:layout_marginTop="81dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="51dp"
        />

</RelativeLayout>